# cern-presentation

./: .gitignore  .nojekyll  _quarto.yml  pyproject.toml  references.bib  robots.txt  search.json  sitemap.xml  slides.html  slides.qmd
.github/workflows/: publish.yml
assets/data/: lr-2-latent-summary.pkl
