[project]
name = "cern-presentation"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali Javani",email = "aj.ali.javan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "plotly[express] (>=6.3.0,<7.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
